feat: add partner blocking
